[project]
name = "diffusion-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy==1.26.4",
    "pillow>=12.1.1",
    "scikit-learn>=1.8.0",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "tqdm>=4.67.3",
    "huggingface-hub[cli]>=0.32.0",
]
